--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fetch-jsonp": "^1.0.2",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.6.3",
+    "gh-pages": "^2.2.0",
     "highcharts": "^5.0.7",
     "jquery": "^3.1.1",
     "loadash": "^1.0.0",
